fix(Sidebar): z-index messing with modals

--- a/src/components/Wallet/SideBar/SideBar.scss
+++ b/src/components/Wallet/SideBar/SideBar.scss
@@ -160,7 +160,7 @@
 // Mobile
 @media screen and (max-width: $mobile-breakpoint-max-width) {
   #sidebar {
-    z-index: 51;
+    z-index: 50;
     height: $sidebar-mobile-height;
     width: 70px;
 
